add things and player

--- a/index.html
+++ b/index.html
@@ -27,29 +27,18 @@
                         <br>
                         <p class="indent">Use arrow keys to move your player '&#x2592;'. </p>
                         <br>
-                        <p class="indent">In case you bump into a wall '&#x2588;', you will get<br>
-                            randomizly a new moving direction.</p>
+                        <p class="indent">In case you bump into a wall '&#x2588;',<br>you will get
+                            randomizly a new moving<br>direction.</p>
                         <br>
                         <p class="ls-4"><u>Goal of the game:</u></p>
                         <br>
-                        <p class="indent">Collect all stuff '*'in all rooms.</p>                
+                        <p class="indent">Collect all things '&#x263C;' in all rooms<br>as fast as you can.</p> 
                     </div>
                     <hr>
-                    <div class="btn">
+                    <div id="start-button" class="btn">
                         <p class="ls-2">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2556;</p>
-                        <p class="ls-4">&#x2502;start game&#x2551;</p>
+                        <p class="ls-4">&#x2502;<span id="btn-txt">start game</span>&#x2551;</p>
                         <p class="ls-2">&#x2558;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x255D;</p>
-                    </div>
-                    <div class="btn">
-                        <p class="ls-2">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2556;</p>
-                        <p class="ls-4">&#x2502;reset game&#x2551;</p>
-                        <p class="ls-2">&#x2558;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x255D;</p>
-<!--
-
-                        <p class="ls-1">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;</p>
-                        <p class="ls-3">&#x2502;reset game&#x2502;</p>
-                        <p class="ls-1">&#x2514;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2518;</p>
--->
                     </div>
                 </div>
                 <div id="canvas" class="">
