first version be playable

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
             <footer>
                 <hr>
-                <h5 class="ls-4">(c) 1980-2019 by D.W.B</h5>
+                <p class="ls-2">(c) 1980-2019 by D.W.B</p>
             </footer>
         </div>
     </div>
