--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://dirk-biermann.github.io/rooms_2_0/favicon.png"/>
     <script type="text/javascript" src="./js/rooms.js"></script>
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/basic.css">
     <link rel="stylesheet" href="./css/rooms.css">
-  
     <title>Rooms 2.0</title>
 </head>
 
