--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="./js/basic.js"></script>
     <script type="text/javascript" src="./js/rooms.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/color-green.css"/>
-    <link rel="stylesheet" type="text/css" media="none" href="./css/color-amber.css"/>
-    <link rel="stylesheet" type="text/css" media="none" href="./css/color-gray.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/color-amber.css" media="none"/>
+    <link rel="stylesheet" type="text/css" href="./css/color-gray.css" media="none"/>
     <link rel="stylesheet" type="text/css" href="./css/font.css">
     <link rel="stylesheet" type="text/css" href="./css/basic.css">
     <link rel="stylesheet" type="text/css" href="./css/rooms.css">
@@ -41,28 +41,28 @@
                         <p class="indent">Collect all things '&#x263C;' in all rooms<br>as fast as you can.</p> 
                     </div>
                     <hr class="brdColor">
-                    <div class="flex-row-c-c">
+                    <div id="control-btn" class="flex-row-c-c">
                         <div id="start-button" class="btn">
-                            <p class="ls-2">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2556;</p>
-                            <p class="ls-4">&#x2502;<span id="btn-txt">start game</span>&#x2551;</p>
-                            <p class="ls-2">&#x2558;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x255D;</p>
+                            <p class="">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt">START GAME</span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x255D;</p>
                         </div>
                         <div style="flex-grow: 1;">&nbsp;</div>
                         <div><p>Color:</p></div>
-                        <div id="chg-color-g" class="btn">
-                            <p class="ls-2">&#x250C;&#x2500;&#x2556;</p>
-                            <p class="ls-2">&#x2502;<span id="btn-txt">G</span>&#x2551;</p>
-                            <p class="ls-2">&#x2558;&#x2550;&#x255D;</p>
+                        <div id="chg-color-g" class="btn selected">
+                            <p class="">&#x250C;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt">G</span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x255D;</p>
                         </div>
                         <div id="chg-color-a" class="btn">
-                            <p class="ls-2">&#x250C;&#x2500;&#x2556;</p>
-                            <p class="ls-2">&#x2502;<span id="btn-txt">A</span>&#x2551;</p>
-                            <p class="ls-2">&#x2558;&#x2550;&#x255D;</p>
+                            <p class="">&#x250C;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt">A</span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x255D;</p>
                         </div>
                         <div id="chg-color-w" class="btn">
-                            <p class="ls-2">&#x250C;&#x2500;&#x2556;</p>
-                            <p class="ls-2">&#x2502;<span id="btn-txt">W</span>&#x2551;</p>
-                            <p class="ls-2">&#x2558;&#x2550;&#x255D;</p>
+                            <p class="">&#x250C;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt">W</span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x255D;</p>
                         </div>    
                     </div>
                 </div>
@@ -71,7 +71,10 @@
             </section>
             <footer>
                 <hr class="brdColor">
-                <p class="ls-2">(c) 1980-2019 by D.W.B</p>
+                <div class="flex-row-c-c">
+                    <p class="ls-2">(c) 1980-2019 by D.W.B </p>
+                    <img class="bkgColor fish" src="./images/piranhia_mask.png" alt="piranhia">    
+                </div>
             </footer>
         </div>
     </div>
