--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="./js/basic.js"></script>
     <script type="text/javascript" src="./js/rooms.js"></script>
-    <link rel="stylesheet" type="text/css" href="./css/color-green.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/color-green.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="./css/color-amber.css" media="none"/>
     <link rel="stylesheet" type="text/css" href="./css/color-gray.css" media="none"/>
     <link rel="stylesheet" type="text/css" href="./css/font.css">
@@ -46,6 +46,13 @@
                             <p class="">&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2556;</p>
                             <p class="">&#x2502;<span id="btn-txt">START GAME</span>&#x2551;</p>
                             <p class="">&#x2558;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x2550;&#x255D;</p>
+                        </div>
+                        <div style="flex-grow: 1;">&nbsp;</div>
+                        <div><p>Sound:</p></div>
+                        <div id="chg-sound" class="btn">
+                            <p class="">&#x250C;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt"></span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x255D;</p>
                         </div>
                         <div style="flex-grow: 1;">&nbsp;</div>
                         <div><p>Color:</p></div>
