--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
             <section class="flex flex-row-c-c">
                 <div id="control" class="">
                     <div id="instruction" class="txtColorSemi">
-                        <p class="ls-4"><u>Instructions:</u></p>
-                        <br>
-                        <p class="indent">Use arrow keys to move your player '&#x2592;'. </p>
-                        <br>
-                        <p class="indent">In case you bump into a wall '&#x2588;',<br>you will get
-                            randomizly a new moving<br>direction.</p>
-                        <br>
-                        <p class="ls-4"><u>Goal of the game:</u></p>
-                        <br>
-                        <p class="indent">Collect all things '&#x263C;' in all rooms<br>as fast as you can.</p> 
+                        <p class="ls-4"><u>Instructions:</u></p><br>
+                            <p class="indent">Use arrow keys to move your player '&#x2592;'. </p><br>
+                            <p class="indent">In case you bump into a wall '&#x2588;',<br>you will get
+                                randomizly a new moving<br>direction.</p><br>
+                            <p class="indent">After collecting all thing, enter<br>next level automatically</p><br>
+                            <p class="indent">If not in time, game ends!</p><br>
+
+                        <p class="ls-4"><u>Goal of the game:</u></p><br>
+                            <p class="indent">Collect all things '<span class="bkgColorSemi" id="thing"></span>' in all rooms<br>as fast as you can.</p> 
                     </div>
                     <hr class="brdColor">
                     <div id="control-btn" class="flex-row-c-c">
