--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/color-green.css" media="screen"/>
     <link rel="stylesheet" type="text/css" href="./css/color-amber.css" media="none"/>
     <link rel="stylesheet" type="text/css" href="./css/color-gray.css" media="none"/>
+    <link rel="stylesheet" type="text/css" href="./css/color-pink.css" media="none"/>
     <link rel="stylesheet" type="text/css" href="./css/font.css">
     <link rel="stylesheet" type="text/css" href="./css/basic.css">
     <link rel="stylesheet" type="text/css" href="./css/rooms.css">
@@ -68,6 +69,11 @@
                         <div id="chg-color-w" class="btn">
                             <p class="">&#x250C;&#x2500;&#x2556;</p>
                             <p class="">&#x2502;<span id="btn-txt">W</span>&#x2551;</p>
+                            <p class="">&#x2558;&#x2550;&#x255D;</p>
+                        </div>    
+                        <div id="chg-color-p" class="btn">
+                            <p class="">&#x250C;&#x2500;&#x2556;</p>
+                            <p class="">&#x2502;<span id="btn-txt">P</span>&#x2551;</p>
                             <p class="">&#x2558;&#x2550;&#x255D;</p>
                         </div>    
                     </div>
